chore: add minitouch_EvATive7 directory to .gitignore
- Ignore minitouch_EvATive7 directory to prevent tracking of these files
- Add .gitkeep file to minitouch_EvATive7 directory to keep the folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ resource/minitouch/
 cache/
 data/
 config/
+minitouch_EvATive7/
+!minitouch_EvATive7/.gitkeep
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
