--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -168,10 +168,11 @@ MD040: true
 
 # MD041/first-line-heading/first-line-h1 - First line in a file should be a top-level heading
 MD041:
-  # Heading level
-  level: 1
-  # RegExp for matching title in front matter
-  front_matter_title: "^\\s*title\\s*[:=]"
+  false
+  ## Heading level
+  #level: 1
+  ## RegExp for matching title in front matter
+  #front_matter_title: "^\\s*title\\s*[:=]"
 
 # MD042/no-empty-links - No empty links
 MD042: true
