--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,9 +35,15 @@ jobs:
           pip install pyinstaller
           python build.py --os ${{ runner.os }} --arch ${{ runner.arch }}
 
+      - name: Generate Changelog
+        run: |
+          python -m pip install evative7-changeloggen
+          changelog .
+
       - name: Create Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
+          body_path: CHANGELOG.md
           files: |
             dist/**
