feat(build): add version parameter and update checking functionality
- Add version parameter to build script
- Generate build_metadata.json with version information
- Implement update checking feature in autodori.py
- Modify GitHub Actions workflow to pass version parameter
- Update requirements.txt to include pyinstaller

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Run build script
         run: |
           pip install pyinstaller
-          python build.py --os ${{ runner.os }} --arch ${{ runner.arch }}
+          python build.py --os ${{ runner.os }} --arch ${{ runner.arch }} --version ${{ github.ref_name }}
 
       - name: Generate Changelog
         run: |
