--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,12 @@ jobs:
           pip install pyinstaller
           python build.py --os ${{ runner.os }} --arch ${{ runner.arch }} --version ${{ github.ref_name }}
 
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-${{ matrix.os }}
+          path: dist/**
+
       - name: Generate Changelog
         run: |
           python -m pip install evative7-changeloggen
